--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Mai jos puteti vedea proiectele mele:
                 </p>
             </div>
-            <img src="https:source.unsplash.com/1600x900/?bitcoin" alt="Bitcoin" class="page-content-img">
+            <img src="https://source.unsplash.com/1600x900/?bitcoin" alt="Bitcoin" class="page-content-img">
         </section>
 
         <!-- sectiune carduri -->
